# CyberChef

./: README.md  a.json  main.py  pyproject.toml
static/css/: dark.css  styles.css
static/js/: main.js
static/python/: check_food.py  finalgetfunction.py  finalgetfunction2.py  findrecipe.py  get_restraunt.py  recipeinfo.py  wiki.py
templates/: index.html  profile.html
